--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1.0.71"
+const-str = "0.5.5"
 libc = "0.2.147"
 nix = "0.26.2"
+sha2 = "0.10.7"
+static_assertions = "1.1.0"
 users = "0.11.0"
