--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ categories = ["command-line-utilities"]
 license = "MIT"
 
 [dependencies]
-anyhow = "1.0.71"
-const-str = "0.5.5"
-libc = "0.2.147"
-nix = "0.26.2"
-sha2 = "0.10.7"
+anyhow = "1.0.93"
+const-str = "0.5.7"
+libc = "0.2.164"
+nix = { version = "0.29.0", features = ["user"] }
+sha2 = "0.10.8"
 static_assertions = "1.1.0"
 users = "0.11.0"
